--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -49,6 +49,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+strong {
+	font-weight: bold;
+}
 /* End of reset */
 * {
   box-sizing: border-box;
